--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,9 @@
 # Environment
 REACT_APP_ENV=DEV
 
+# Firebase Cloud Functions
+REACT_APP_CLOUD_FUNCTIONS=
+
 # Firebase
 REACT_APP_FIREBASE_APIKEY=
 REACT_APP_FIREBASE_AUTHDOMAIN=
@@ -19,6 +22,3 @@ REACT_APP_MAPBOX=pk..
 
 # openweathermap.org
 REACT_APP_OPEN_WEATHER=
-
-# default images
-REACT_APP_DEFAULT_PAGE_ART=https://<image>
