--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,11 @@
 # Environment
 REACT_APP_ENV=DEV
 
-# Firebase Cloud Functions
-REACT_APP_CLOUD_FUNCTIONS=
+# PushToTalk
+REACT_APP_CLOUD_FUNCTIONS=https://us-central1-listingslab-production.cloudfunctions.net/pushToTalk
+
+# ipgeolocation.io
+REACT_APP_IPGEO=
 
 # Firebase
 REACT_APP_FIREBASE_APIKEY=
@@ -13,12 +16,3 @@ REACT_APP_FIREBASE_PROJECTID=
 REACT_APP_FIREBASE_STORAGEBUCKET=-.appspot.com
 REACT_APP_FIREBASE_MESSAGESENDERID=
 REACT_APP_FIREBASE_APPID=1:::
-
-# ipgeolocation.io
-REACT_APP_IPGEO=
-
-# Mapbox
-REACT_APP_MAPBOX=pk..
-
-# openweathermap.org
-REACT_APP_OPEN_WEATHER=
