--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ironavirus",
   "description": "在这些困难和不寻常的时刻",
-  "version": "0.1.3",
+  "version": "0.1.9",
   "author": {
     "name": "weizang75",
     "email": "weizang75@gmail.com"
@@ -9,7 +9,6 @@
   "scripts": {
     "start": "clear && react-scripts start",
     "build": "clear && react-scripts build",
-    "functions": "clear && cd ./functions && yarn serve",
     "deploy": "clear && react-scripts build && firebase deploy"
   },
   "license": "MIT",
@@ -35,6 +34,7 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-draggable": "^4.4.2",
     "react-firestore": "^1.0.1",
     "react-flickr-lightbox": "^1.8.5",
     "react-markdown": "^4.3.1",
