更新文档真棒用户界面

--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,11 @@
 # Environment
 REACT_APP_ENV=DEV
 
-# PushToTalk
-REACT_APP_CLOUD_FUNCTIONS=https://us-central1-listingslab-production.cloudfunctions.net/pushToTalk
+# PushToTalk function
+REACT_APP_CLOUD_FUNCTIONS=https://---.cloudfunctions.net/pushToTalk
+
+# ironavirus function
+REACT_APP_IRONAVIRUS=http://---/ironavirus
 
 # ipgeolocation.io
 REACT_APP_IPGEO=
