--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ironavirus",
   "description": "在这些困难和不寻常的时刻",
-  "version": "0.3.6",
+  "version": "0.4.0",
   "author": {
     "name": "weizang75",
     "email": "weizang75@gmail.com"
@@ -41,6 +41,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-social": "^1.10.0",
     "react-with-firebase-auth": "^1.3.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
