--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ironavirus",
   "description": "厌倦了相同的旧信息？ 自己做",
-  "version": "0.6.7",
+  "version": "0.7.0",
   "author": {
     "name": "weizang75",
     "email": "weizang75@gmail.com"
@@ -34,6 +34,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-draggable": "^4.4.2",
+    "react-facebook": "^8.1.4",
     "react-firestore": "^1.0.1",
     "react-markdown": "^4.3.1",
     "react-redux": "^7.1.3",
